# secure-cicd-cpp

./: .dockerignore  .gitignore  .talismanrc  CMakeLists.txt  Dockerfile  INTERVIEW_GUIDE.md  Jenkinsfile  README.md  docker-compose.yml
.pvenv/: pyvenv.cfg
examples/: leaked_config.env.example
scripts/: build.ps1  build.sh  security_report.py
src/: main.cpp  stats.cpp  stats.h
talisman_report/: report.html
talisman_report/talisman_reports/data/: report.json
tests/: test_stats.cpp
